# RedditToxicityDataset

./: .gitignore  README.md  pyproject.toml
redditDataset/: pyproject.toml
redditDataset/Classification/: main.py
redditDataset/Classification/dataset/: conversationDataset.py  messageDataset.py  transformDatasetInConversationDataset.py
redditDataset/Notebook/: exploreData.ipynb
redditDataset/redditdataset/: Gatherer.py  MongoHandler.py  checkDeleted.py  main.py
redditDataset/redditdataset/Enums/: CollectionsNames.py  SubmissionsGathering.py  SubredditGathering.py
redditDataset/redditdataset/Types/: Authors.py  Comments.py  Subreddits.py
