[tool.poetry]
name = "redditdataset"
version = "0.1.0"
description = ""
authors = [
    "Theophile BERTELOOT <thber64@ulaval.ca>",
    "Loïc Baret <baret.loic.1@gmail.com>",
]
maintainers = [
    "Theophile BERTELOOT <thber64@ulaval.ca>",
    "Loïc Baret <baret.loic.1@gmail.com>",
]
readme = "README.md"
packages = [{include = "redditdataset", from = "redditDataset"}]

[tool.poetry.scripts]
gather = "redditDataset.redditdataset.main:cli"
checkDeleted = "redditDataset.redditdataset.checkDeleted:cli"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
pymongo = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
