[tool.poetry]
name = "redditdataset"
version = "0.1.0"
description = ""
authors = [
    "Theophile BERTELOOT <thber64@ulaval.ca>",
    "Loïc Baret <baret.loic.1@gmail.com>",
]
maintainers = [
    "Theophile BERTELOOT <thber64@ulaval.ca>",
    "Loïc Baret <baret.loic.1@gmail.com>",
]
readme = "README.md"
packages = [{include = "redditdataset", from = "redditDataset"}]

[tool.poetry.scripts]
gather = "redditDataset.redditdataset.main:cli"
checkDeleted = "redditDataset.redditdataset.checkDeleted:cli"
classification = "redditDataset.Classification.main:cli"
fixLabels = "redditDataset.redditdataset.checkDeleted:fixLabels"
transformInConversationDataset = "redditDataset.Classification.dataset.transformDatasetInConversationDataset:cli"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
pymongo = "^4.7.1"
click = "^8.2.0"
torch = "^2.7.0"
torch-geometric = "^2.6.1"
sentence-transformers = "^4.1.0"
pandas = "^2.2.3"


[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
